--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,10 @@
-name: MSpawns
+name: SpawnPoint
 main: MSpawns\Main
-version: "1.5"
+version: "1.0"
 api: [1.11.0]
 load: STARTUP
-author: EvolSoft
-description: Multiple Spawns Plugin
-website: https://www.evolsoft.tk
+author: #SHEEP
+description: Spawn plugin for CyroPE
 
 commands:
  mspawns:
